--- a/css/custom.css
+++ b/css/custom.css
@@ -195,6 +195,9 @@ body {
 .hit-cat-type-m {
   background-image: url(../images/sprite-cat-small.png); }
 
+.com-type-m {
+  background-image: url(../images/sprite-coin.png); }
+
 .hit .hit-dog-type-l {
   background-position: -132px 0px; }
 
@@ -265,8 +268,7 @@ body {
   width: 100px;
   height: 100px; }
   .img.hit-type img {
-    width: 100%;
-    border: 1px solid red; }
+    width: 100%; }
 
 .hit-type.on {
   display: block; }
@@ -303,6 +305,11 @@ body {
     z-index: 0; }
 
 .hit-targets.save .img.com-type-m {
+  display: block;
+  width: 91%;
+  background-size: 889px 97px; }
+
+.img.com-type-m {
   display: block;
   width: 91%;
   background-size: 889px 97px; }
@@ -380,9 +387,9 @@ body {
     background-position: -12px 0; } }
 @-webkit-keyframes animationCoin {
   0% {
-    background-position: -100px 0px; }
+    background-position: -100px 100px; }
   100% {
-    background-position: -100px -30px; } }
+    background-position: -100px 0px; } }
 @-webkit-keyframes animationHitObject {
   0% {
     background-position: -100px 0px; }
@@ -435,13 +442,22 @@ body {
   animation-name: animationCatTypeM;
   animation-duration: 2s; }
 
-.save .com-type-m {
+.com-type-m {
   /* Chrome, Safari, Opera */
   -webkit-animation-name: animationCoin;
   -webkit-animation-duration: 1s;
   /* Standard syntax */
   animation-name: animationCoin;
   animation-duration: 1s; }
+
+.loading-screen > div {
+  position: relative; }
+.loading-screen .headline {
+  padding-top: 300px;
+  font-family: Veneer-Three;
+  font-size: 5em;
+  color: #ffffff;
+  margin: 0 auto; }
 
 .start-screen {
   background-color: #921A1D;
