--- a/css/custom.scss
+++ b/css/custom.scss
@@ -21,6 +21,7 @@ $lb-h: (($lb-w / 4) * 3);
 
 html, body {width: 100%; height: 100%;}
 // temporary background
+
 body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 #main-frame {
 	// Remove when done testing
@@ -172,6 +173,7 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 .hit-dog-type-s {background-image: url(../images/sprite-dog-small.png);}
 .cat-type-m, 
 .hit-cat-type-m {background-image: url(../images/sprite-cat-small.png);}
+.com-type-m {background-image: url(../images/sprite-coin.png);}
 
 .hit .hit-dog-type-l {background-position: -132px 0px;}
 .hit .hit-dog-type-s {background-position: -133px 0px;}
@@ -210,7 +212,6 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 
 	img{
 		width: 100%;
-		border: 1px solid red;
 	}
 }
 .hit-type.on{
@@ -251,6 +252,12 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
 		background-size: 889px 97px;
 	}
 }
+
+.img.com-type-m {
+		display: block;
+		width: 91%;
+		background-size: 889px 97px;
+	}
 
 .hit, .kill, .save, .saved{
 	pointer-events:none;
@@ -301,8 +308,8 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
     100%   {background-position: -12px 0;}
 }
 @-webkit-keyframes animationCoin {
-	0%   {background-position: -100px 0px;}
-    100%   {background-position: -100px -30px;}
+	0%   {background-position: -100px 100px;}
+    100%   {background-position: -100px 0px;}
 }
 @-webkit-keyframes animationHitObject {
 	0%   {background-position: -100px 0px;}
@@ -352,7 +359,7 @@ body {@include background-image(linear-gradient(to bottom, #000, #F4F5F7));}
     animation-duration: 2s;
 }
 
-.save .com-type-m{
+.com-type-m{
 	 /* Chrome, Safari, Opera */
     -webkit-animation-name: animationCoin;
     -webkit-animation-duration: 1s;
