--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,11 @@
+@font-face {
+  font-family: Veneer-Three;
+  src: url("../fonts/Veneer-Three.otf"); }
 ::selection,
 img::selection {
   background-color: transparent;
   color: none; }
 
-@font-face {
-  font-family: Veneer-Three;
-  src: url("../fonts/Veneer-Three.otf"); }
 html, body {
   width: 100%;
   height: 100%; }
@@ -212,9 +212,54 @@ body {
   background-image: url(../images/sprite-cat-small.png); }
 
 .com-type-m,
-.hit-com-type-m {
+.hit-com-type-animation {
   background-image: url(../images/sprite-coin.png); }
 
+.hit .hit-com-type-animation, .save .hit-com-type-animation {
+  background-image: url(../images/commissionerCoins_1.png); }
+
+.hit-targets.hit .img.hit-com-type-animation, .hit-targets.save .img.hit-com-type-animation {
+  background-size: 100px 100px; }
+
+.hit-targets.kill .img.hit-com-type-animation, .hit-targets.saved .img.hit-com-type-animation {
+  background-size: 193px 100px; }
+
+.kill .hit-com-type-animation,
+.saved .hit-com-type-animation {
+  background-image: url(../images/commissionerCoins_animation.png);
+  width: 100px;
+  height: 100px;
+  -webkit-animation: play 0.2s steps(2) forwards;
+  -moz-animation: play 0.2s steps(2) forwards;
+  -ms-animation: play 0.2s steps(2) forwards;
+  -o-animation: play 0.2s steps(2) forwards;
+  animation: play 0.2s steps(2) forwards; }
+
+@-webkit-keyframes play {
+  0% {
+    background-position: 0px 0; }
+  100% {
+    background-position: -193px 0; } }
+@-moz-keyframes play {
+  0% {
+    background-position: 0px 0; }
+  100% {
+    background-position: -193px 0; } }
+@-ms-keyframes play {
+  0% {
+    background-position: 0px 0; }
+  100% {
+    background-position: -193px 0; } }
+@-o-keyframes play {
+  0% {
+    background-position: 0px 0; }
+  100% {
+    background-position: -193px 0; } }
+@keyframes play {
+  0% {
+    background-position: 0px 0; }
+  100% {
+    background-position: -193px 0; } }
 .hit .hit-dog-type-l {
   background-position: -132px 0px; }
 
@@ -251,7 +296,7 @@ body {
   background-position: -476px 0px; }
 
 .com-type-m[data-varComm="1"] {
-  background-position: -100px 0px; }
+  background-position: -103px 3px; }
 
 .com-type-m[data-varComm="2"] {
   background-position: -199px 0px; }
@@ -404,9 +449,9 @@ body {
     background-position: -12px 0; } }
 @-webkit-keyframes animationCoin {
   0% {
-    background-position: -100px 100px; }
+    background-position: -103px 100px; }
   100% {
-    background-position: -100px 0px; } }
+    background-position: -103px 3px; } }
 @-webkit-keyframes animationHitObject {
   0% {
     background-position: -100px 0px; }
@@ -430,10 +475,10 @@ body {
     background-position: -12px 0; } }
 @keyframes animationCoin {
   0% {
-    background-position: -100px 0px;
+    background-position: -103px 3px;
     opacity: 1; }
   100% {
-    background-position: -100px -30px;
+    background-position: -103px -30px;
     opacity: 0; } }
 .dog-type-l.on {
   /* Chrome, Safari, Opera */
