--- a/css/custom.css
+++ b/css/custom.css
@@ -10,9 +10,12 @@ html, body {
   width: 100%;
   height: 100%; }
 
+html, body, p, div {
+  font-family: 'Lato', sans-serif; }
+
 body {
-  background-image: -webkit-linear-gradient( top , #000, #F4F5F7);
-  background-image: linear-gradient(to bottom, #000, #F4F5F7); }
+  background-image: url(../images/wood_1_@2X.png);
+  background-color: #1e1e1e; }
 
 #main-frame {
   background-color: #CCC;
@@ -519,13 +522,12 @@ body {
   position: relative; }
 .loading-screen .headline {
   padding-top: 300px;
-  font-family: Veneer-Three;
+  font-family: 'Lato', sans-serif;
   font-size: 5em;
   color: #ffffff;
   margin: 0 auto; }
 
 .start-screen {
-  background-color: #921A1D;
   text-align: center; }
   .start-screen > div {
     position: relative; }
@@ -536,13 +538,13 @@ body {
   .start-screen .subheadline {
     width: 60%;
     padding-top: 30px;
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 2em;
     color: #82CCB6;
     margin: 0 auto; }
   .start-screen .subheadline2 {
     padding-top: 10px;
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: bold;
     font-size: 1.6em;
     color: #FFFFFF; }
@@ -556,6 +558,10 @@ body {
   -webkit-animation-iteration-count: infinite;
   -moz-animation-iteration-count: infinite;
   animation-iteration-count: infinite; }
+
+.play-active {
+  background-image: url(../images/wood_1_@2x.png);
+  background-color: #1e1e1e; }
 
 @-webkit-keyframes whackEmAll {
   0% {
@@ -599,7 +605,7 @@ body {
   color: #ffffff; }
 .kill-pets .subheadline, .save-pets .subheadline {
   width: 50%;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   color: #ffffff;
   margin: 0 auto; }
@@ -612,7 +618,7 @@ body {
     font-size: 1.2em; }
   .kill-pets .instruction-points .points, .save-pets .instruction-points .points {
     color: #82CCB6;
-    font-size: 2em; }
+    font-size: 1.4em; }
 .kill-pets .button-wrapper, .save-pets .button-wrapper {
   margin-top: 50px; }
 
@@ -625,7 +631,7 @@ body {
   margin: 0 auto; }
 .kill-commissioner .subheadline2, .save-commissioner .subheadline2 {
   width: 60%;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   color: #ffffff;
   margin: 0 auto; }
@@ -636,7 +642,7 @@ body {
   position: relative; }
 .kill-score .headline, .save-score .headline {
   padding-top: 150px;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 3em;
   color: #ffffff; }
 .kill-score .score, .save-score .score {
@@ -647,13 +653,13 @@ body {
   color: #ffffff; }
 .kill-score .subheadline, .save-score .subheadline {
   width: 50%;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   color: #ffffff;
   margin: 0 auto; }
 .kill-score .subheadline2, .save-score .subheadline2 {
   width: 80%;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 2em;
   color: #82CCB6;
   margin: 0 auto; }
@@ -667,7 +673,7 @@ body {
   line-height: 1.6em;
   padding-top: 100px;
   text-align: left;
-  font-family: Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1.3em;
   color: #ffffff;
   margin: 0px auto; }
