--- a/css/frames.scss
+++ b/css/frames.scss
@@ -4,14 +4,14 @@
 	}
 	.headline{
 		padding-top: 300px;
-		font-family: Veneer-Three;
+		font-family: 'Lato', sans-serif;
 		font-size: 5em;
 		color: #ffffff;
 		margin:0 auto;
 	}	
 }
 .start-screen {
-	background-color:#921A1D;
+	//background-color:#921A1D;
 	text-align:center;
 	> div {
 		position: relative;
@@ -25,14 +25,14 @@
 	.subheadline{
 		width: 60%;
 		padding-top: 30px;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 2em;
 		color: #82CCB6;
 		margin:0 auto;
 	}	
 	.subheadline2{
 		padding-top: 10px;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-weight: bold;
 		font-size: 1.6em;
 		color: #FFFFFF;
@@ -46,6 +46,10 @@
 		@include animation( whackEmAll 1.0s ease-in-out );
 		@include animation-iteration-count( infinite );
 	}
+}
+.play-active{
+	background-image: url(../images/wood_1_@2x.png);
+	background-color: #1e1e1e;
 }
 @include keyframes( whackEmAll ) {
 	0%	{@include transform(scale( 0.99 ));}
@@ -65,7 +69,7 @@
 	}
 	.subheadline{
 		width: 50%;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 2em;
 		color: #ffffff;
 		margin:0 auto;
@@ -81,7 +85,7 @@
 		}
 		.points{
 			color:#82CCB6;
-			font-size: 2em;
+			font-size: 1.4em;
 		}
 	}
 	.button-wrapper	{
@@ -102,7 +106,7 @@
 	}	
 	.subheadline2{
 		width: 60%;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 2em;
 		color: #ffffff;
 		margin:0 auto;
@@ -118,7 +122,7 @@
 	}
 	.headline{
 		padding-top: 150px;
-		font-family:Arial, sans-serif;
+		font-family:'Lato', sans-serif;
 		font-size: 3em;
 		color: #ffffff;
 	}
@@ -131,14 +135,14 @@
 	}
 	.subheadline{
 		width: 50%;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 2em;
 		color: #ffffff;
 		margin:0 auto;
 	}
 	.subheadline2{
 		width: 80%;
-		font-family: Arial, sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-size: 2em;
 		color: #82CCB6;
 		margin:0 auto;
@@ -157,7 +161,7 @@
 		line-height: 1.6em;
 		padding-top: 100px;
 		text-align: left;
-		font-family:Arial, sans-serif;
+		font-family:'Lato', sans-serif;
 		font-size: 1.3em;
 		color: #ffffff;
 		margin:0px auto;
