--- a/css/frames.scss
+++ b/css/frames.scss
@@ -48,7 +48,7 @@
 	}
 }
 .play-active{
-	background-image: url(../images/wood_1_@2x.png);
+	background-image: url(../images/wood_1_@2X.png);
 	background-color: #1e1e1e;
 }
 @include keyframes( whackEmAll ) {
