--- a/css/custom.css
+++ b/css/custom.css
@@ -26,10 +26,11 @@ body {
   position: relative; }
 
 .frame {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-  display: none;
+  display: block;
+  visibility: hidden;
   background-color: #921A1D;
   text-align: center; }
   .frame > div {
@@ -57,7 +58,7 @@ body {
     margin: 0px 20px; }
 
 .frame.active {
-  display: block; }
+  visibility: visible; }
 
 #game-menu {
   width: 100%;
@@ -560,7 +561,7 @@ body {
   animation-iteration-count: infinite; }
 
 .play-active {
-  background-image: url(../images/wood_1_@2x.png);
+  background-image: url(../images/wood_1_@2X.png);
   background-color: #1e1e1e; }
 
 @-webkit-keyframes whackEmAll {
