--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,10 +1,10 @@
 @import 'bourbon/dist/_bourbon.scss';
 // Splash Screen
 
-@font-face{
-	font-family: Veneer-Three;
-	src: url('../fonts/Veneer-Three.otf');
-}
+// @font-face{
+// 	font-family: Veneer-Three;
+// 	src: url('../fonts/Veneer-Three.otf');
+// }
 
 ::selection,
 img::selection {background-color: transparent; color: none;}
